# ED22-01-Angel-Rivera

./: Bitacora.md  CMakeLists.txt  README.md
Docs/: README.md
src/: main.cpp
src/logic/: CentroidTracker.cpp  Detector.cpp  LinkedList.cpp  Nodo.cpp  Persona.cpp
src/logic/includes/: CentroidTracker.h  Detector.h  LinkedList.h  Nodo.h  Persona.h
